--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "extra" : {
         "branch-alias" : {
-            "dev-main": "3.1.0"
+            "dev-main": "3.1.-dev"
         }
     }
 }
