--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,12 @@
     "require": {
         "php": ">=7.4"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~6.0 || ~7.0 || ~9.0"
+    },
     "extra" : {
         "branch-alias" : {
-            "dev-main": "3.1-dev"
+            "dev-main": "3.1"
         }
     }
 }
