--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,13 @@
         "php": ">=7.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0 || ~7.0 || ~9.0"
+
     },
     "extra" : {
         "branch-alias" : {
-            "dev-main": "3.1"
+            "main": "3.1"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
