--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,10 @@
         }
     ],
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "nunomaduro/laravel-desktop-notifier": ">=2.6.0"
     },
     "require-dev": {
-
     },
     "extra" : {
         "branch-alias" : {
